# doofus

./: .gitignore  CMakeLists.txt  README.md  build.sh
assets/: player.bbmodel
assets/shaders/: block.frag  block.vert  model.frag  model.vert  sky.frag  sky.vert  ui.frag  ui.vert
src/: main.cpp
src/camera/: Camera.cpp  Camera.h
src/components/: RigidBody.h  Transform.h
src/core/: Application.cpp  Application.h  Setting.h  Time.cpp  Time.h
src/ecs/components/: RigidBody.h  Transform.h
src/ecs/systems/: PhysicsSystem.cpp  PhysicsSystem.h
src/game/: Game.cpp  Game.h
src/game/scene/: Scene.cpp  Scene.h
src/input/: Input.cpp  input.h
src/platform/: IWindow.h  WindowFactory.cpp  WindowFactory.h
src/platform/input/: Input.cpp  Input.h
src/platform/linux/: LinuxWindow.cpp  LinuxWindow.h
src/platform/sdl/: SDLWindow.cpp  SDLWindow.h
src/platform/windows/: Win32Window.cpp  Win32Window.h
src/player/: PlayerController.cpp  PlayerController.h
src/renderer/: Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Sky.cpp  Sky.h  Texture.cpp  Texture.h
src/renderer/model/: Model.cpp  Model.h  OBJLoader.cpp  OBJLoader.h  player.mtl
src/renderer/opengl/: Mesh.cpp  Mesh.h  ModelMesh.cpp  ModelMesh.h  Shader.cpp  Texture.cpp  Texture.h  TextureArray.cpp  TextureArray.h
src/renderer/ui/: Crosshair.cpp  Crosshair.h  DebugOverlay.cpp  DebugOverlay.h
src/renderer/world/: Chunk.cpp  Chunk.h  Noise.cpp  Noise.h  TerrainGenerator.cpp  TerrainGenerator.h  World.cpp  World.h
src/renderer/world/block/: Block.h  BlockData.h  BlockType.h
src/systems/: PhysicsSystem.cpp  PhysicsSystem.h
src/utils/: Log.cpp  Log.h
src/world/: Chunk.cpp  Chunk.h  ChunkWorker.cpp  ChunkWorker.h  TerrainGenerator.cpp  TerrainGenerator.h  World.cpp  World.h
src/world/biome/: Biome.h  BiomeManager.cpp  BiomeManager.h
src/world/biome/desert/: DesertBiome.cpp  DesertBiome.h
src/world/biome/mountain/: MountainBiome.cpp  MountainBiome.h
src/world/biome/plain/: PlainBiome.cpp  PlainBiome.h
src/world/block/: BlockData.h  BlockType.h
src/world/climate/: ClimateSample.h  ClimateSampler.cpp  ClimateSampler.h
src/world/mesher/: GreedyMesher.cpp  GreedyMesher.h
src/world/noise/: CellularNoise.cpp  CellularNoise.h  FBMNoise.cpp  FBMNoise.h  Noise.cpp  Noise.h  PerlinNoise.cpp  PerlinNoise.h  RidgeNoise.cpp  RidgeNoise.h  ValueNoise.cpp  ValueNoise.h
src/world/terrain/: TerrainSample.h  TerrainSampler.cpp  TerrainSampler.h
